--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Chaos Game 2D</title>
-    <p>Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a></p>
+    <title>Chaos Game 2D<br>
+    Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a></title>
 
     <link rel=”shortcut icon” href="images/Sierpinski_triangle-32x32" type=”image/png”>
     <link rel=”icon” href=”images/Sierpinski_triangle-32x32” type=”image/png”>
