--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Chaos Game 2D<br>
-    Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a></title>
+    <title>Chaos Game 2D</title>
 
     <link rel=”shortcut icon” href="images/Sierpinski_triangle-32x32" type=”image/png”>
     <link rel=”icon” href=”images/Sierpinski_triangle-32x32” type=”image/png”>
@@ -22,7 +21,8 @@
   <body>
 
   	<h1 class="text-center">Chaos Game 2D</h1>
-    <p class="text-center" style="margin-bottom: 30px;">Sierpinski Triangle</p>
+    <p class="text-center" style="margin-bottom: 30px;">Sierpinski Triangle<br>
+    Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a></p>
 
   	<div class="text-center" style="position: relative;">
   		<div style="position: relative;">
