--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   	<h1 class="text-center">Chaos Game 2D</h1>
     <p class="text-center" style="margin-bottom: 30px;">Sierpinski Triangle<br>
-    Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a></p>
+    Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a>
 
   	<div class="text-center" style="position: relative;">
   		<div style="position: relative;">
