--- a/page2.html
+++ b/page2.html
@@ -7,9 +7,6 @@
 
     <title>Chaos Game 2D</title>
 
-    <link rel=”shortcut icon” href="images/Sierpinski_triangle-32x32" type=”image/png”>
-    <link rel=”icon” href=”images/Sierpinski_triangle-32x32” type=”image/png”>
-
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,7 +16,7 @@
 
   </head>
   <body>
-  <h1 style="text-align:centered;">Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/">Greg Wattonville</a></h1>
+  <h1 style="align:centered;">Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/">Greg Wattonville</a></h1>
 
     <section class="next-section" id="triangle" style="margin-bottom: 3em;">
     	<div class="container-fluid pt-3">
