--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,9 @@
 
     <title>Chaos Game 2D</title>
 
+    <link rel=”shortcut icon” href="images/Sierpinski_triangle-32x32" type=”image/png”>
+    <link rel=”icon” href=”images/Sierpinski_triangle-32x32” type=”image/png”>
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +19,45 @@
 
   </head>
   <body>
-  <h1 style="align:centered;">Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/">Greg Wattonville</a></h1>
+
+    <div class="container-fluid" style="margin-bottom: 3em; padding-top: 1.5rem; max-width: 46rem;">
+  	  <div class="header clearfix" style="padding-bottom: 1.5rem;">
+  	    <nav>
+  	      <ul class="nav nav-pills float-right">
+  	        <li class="nav-item">
+  	          <a class="nav-link" href="#triangle">Triangle</a>
+  	        </li>
+  	        <li class="nav-item">
+  	          <a class="nav-link" href="#square">Square</a>
+  	        </li>
+  	        <li class="nav-item">
+  	          <a class="nav-link" href="#pentagon">Pentagon</a>
+  	        </li>
+  	      </ul>
+  	    </nav>
+  	    <a class="text-muted" href="https://gregwattonville.github.io/chaos-game-2d/">Chaos Game 2D</a>
+  	  </div>
+	  </div> <!-- End Container -->
+
+  	<h1 class="text-center">Chaos Game 2D</h1>
+    <p class="text-center" style="margin-bottom: 30px;">Sierpinski Triangle</p>
+
+  	<div class="text-center" style="position: relative;">
+  		<div style="position: relative;">
+  			<canvas class="canvas-border" id="js-canvas-triangle-example-lower" width="800" height="400" style="position:absolute; z-index: 0;"></canvas>
+  			<canvas id="js-canvas-triangle-example-upper" width="800" height="400" style="z-index: 1; margin: 0 auto 30px; border:1px solid #000000;"></canvas>
+  		</div>
+  	</div>
+  	<p class="text-center next-section">
+  		<button id="js-btn-triangle-animated-play" type="button" class="btn btn-secondary"><i class="fa fa-play"></i></button>
+  		<button id="js-btn-triangle-animated-pause" type="button" class="btn btn-secondary"><i class="fa fa-pause"></i></button>
+  		<button id="js-btn-triangle-animated-step-backward" type="button" class="btn btn-secondary"><i class="fa fa-step-backward"></i></button>
+  		<button id="js-btn-triangle-animated-step-forward" type="button" class="btn btn-secondary"><i class="fa fa-step-forward"></i></button>
+  	</p>
+
+    <p class="text-center next-section text-muted">
+      <i class="fa fa-chevron-down fa-2" aria-hidden="true"></i>
+    </p>
 
     <section class="next-section" id="triangle" style="margin-bottom: 3em;">
     	<div class="container-fluid pt-3">
@@ -68,6 +109,143 @@
   	  	</div> <!-- END Row -->
   	 </div><!-- END Container -->
     </section>
+
+    <p class="text-center next-section text-muted">
+      <i class="fa fa-chevron-down fa-2" aria-hidden="true"></i>
+    </p>
+
+
+
+
+
+    <section class="next-section" id="square">
+    	<div class="container-fluid pt-3">
+    		<div class="row">
+  		  	<div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-3 offset-lg-1">
+  		  		<h3 class="text-center">Square</h3>
+  		  		<hr>
+  		  		<p class="text-center">Click in the square to start</p>
+
+  		  		<div class="form-group row">
+    				  <label for="epochs-number-input" class="col-2 col-form-label">Epochs</label>
+    					<div class="col-8 offset-1">
+    					  <input class="form-control" type="number" value="1000" id="js-input-rectangle-epochs">
+    					</div>
+    				</div>
+
+  				<table class="table table-bordered">
+  				  <thead>
+  				    <tr class="table-active">
+  				      <th class="text-center">X</th>
+  				      <th class="text-center">Y</th>
+  				    </tr>
+  				  </thead>
+  				  <tbody>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x0" class="form-control" type="number" value="250" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y0" class="form-control" type="number" value="400" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x1" class="form-control" type="number" value="550" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y1" class="form-control" type="number" value="400" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x2" class="form-control" type="number" value="550" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y2" class="form-control" type="number" value="100" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x3" class="form-control" type="number" value="250" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y3" class="form-control" type="number" value="100" min="0" max="600" step="1"></td>
+  				    </tr>
+  				  </tbody>
+  				</table>
+          <p class="text-center">
+            <button id="js-btn-drawRectangle" type="button" class="btn btn-primary" style="margin-bottom: 1.5em">Draw</button>
+          </p>
+
+  		  	</div> <!-- END col-4 -->
+
+  		  	<div class="col-lg-7">
+      			<canvas class="canvas-border" id="js-canvas-rectangle" width="800" height="600" style="display: block; margin: 0 auto; border:1px solid #000000"></canvas>
+  			</div> <!-- END col -->
+
+  	  	</div> <!-- END Row -->
+  	 </div><!-- END Container -->
+    </section>
+
+    <p class="text-center next-section text-muted">
+      <i class="fa fa-chevron-down fa-2" aria-hidden="true"></i>
+    </p>
+
+
+    <section class="next-section" id="pentagon">
+    	<div class="container-fluid pt-3">
+    		<div class="row">
+  		  	<div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-3 offset-lg-1">
+  		  		<h3 class="text-center">Pentagon</h3>
+  		  		<hr>
+  		  		<p class="text-center">Click in the pentagon to start</p>
+
+  		  		<div class="form-group row">
+  				    <label for="epochs-number-input" class="col-2 col-form-label">Epochs</label>
+    					<div class="col-8 offset-1">
+    					  <input class="form-control" type="number" value="1000" id="js-input-pentagon-epochs">
+    					</div>
+    				</div>
+
+  				<table class="table table-bordered">
+  				  <thead>
+  				    <tr class="table-active">
+  				      <th class="text-center">X</th>
+  				      <th class="text-center">Y</th>
+  				    </tr>
+  				  </thead>
+  				  <tbody>
+  				    <tr>
+  				      <td><input id="js-input-pentagon-x0" class="form-control" type="number" value="200" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-pentagon-y0" class="form-control" type="number" value="225" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-pentagon-x1" class="form-control" type="number" value="300" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-pentagon-y1" class="form-control" type="number" value="400" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-pentagon-x2" class="form-control" type="number" value="500" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-pentagon-y2" class="form-control" type="number" value="400" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-pentagon-x3" class="form-control" type="number" value="600" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-pentagon-y3" class="form-control" type="number" value="225" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-pentagon-x4" class="form-control" type="number" value="400" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-pentagon-y4" class="form-control" type="number" value="100" min="0" max="600" step="1"></td>
+  				    </tr>
+  				  </tbody>
+  				</table>
+          <p class="text-center">
+            <button id="js-btn-drawPentagon" type="button" class="btn btn-primary" style="margin-bottom: 1.5em">Draw</button>
+          </p>
+
+  		  </div> <!-- END col-->
+
+  		  	<div class="col-lg-7">
+      			<canvas class="canvas-border" id="js-canvas-pentagon" width="800" height="600" style="display: block; margin: 0 auto; border:1px solid #000000"></canvas>
+  		  	</div> <!-- END col-8 -->
+
+  	  	</div> <!-- END Row -->
+  	 </div><!-- END Container -->
+    </section>
+
+
+    <footer class="text-center">
+       <a class="github-link" href="https://github.com/gregwattonville/chaos-game-2d">
+        <img src="images/GitHub-Mark-Light-64px.png" alt="Github Mark Light">
+        <span>View on GitHub</span>
+      </a>
+  	</footer>
+
+
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
