--- a/page2.html
+++ b/page2.html
@@ -76,14 +76,67 @@
     </section>
 
 
-
+<div style="display:none">
     <p class="text-center next-section text-muted">
       <i class="fa fa-chevron-down fa-2" aria-hidden="true"></i>
     </p>
 
 
 
+<section class="next-section" id="square">
+    	<div class="container-fluid pt-3">
+    		<div class="row">
+  		  	<div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-3 offset-lg-1">
+  		  		<h3 class="text-center">Square</h3>
+  		  		<hr>
+  		  		<p class="text-center">Click in the square to start</p>
 
+  		  		<div class="form-group row">
+    				  <label for="epochs-number-input" class="col-2 col-form-label">Epochs</label>
+    					<div class="col-8 offset-1">
+    					  <input class="form-control" type="number" value="1000" id="js-input-rectangle-epochs">
+    					</div>
+    				</div>
+
+  				<table class="table table-bordered">
+  				  <thead>
+  				    <tr class="table-active">
+  				      <th class="text-center">X</th>
+  				      <th class="text-center">Y</th>
+  				    </tr>
+  				  </thead>
+  				  <tbody>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x0" class="form-control" type="number" value="250" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y0" class="form-control" type="number" value="400" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x1" class="form-control" type="number" value="550" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y1" class="form-control" type="number" value="400" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x2" class="form-control" type="number" value="550" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y2" class="form-control" type="number" value="100" min="0" max="600" step="1"></td>
+  				    </tr>
+  				    <tr>
+  				      <td><input id="js-input-rectangle-x3" class="form-control" type="number" value="250" min="0" max="800" step="1"></td>
+  				      <td><input id="js-input-rectangle-y3" class="form-control" type="number" value="100" min="0" max="600" step="1"></td>
+  				    </tr>
+  				  </tbody>
+  				</table>
+          <p class="text-center">
+            <button id="js-btn-drawRectangle" type="button" class="btn btn-primary" style="margin-bottom: 1.5em">Draw</button>
+          </p>
+
+  		  	</div> <!-- END col-4 -->
+
+  		  	<div class="col-lg-7">
+      			<canvas class="canvas-border" id="js-canvas-rectangle" width="800" height="600" style="display: block; margin: 0 auto; border:1px solid #000000"></canvas>
+  			</div> <!-- END col -->
+
+  	  	</div> <!-- END Row -->
+  	 </div><!-- END Container -->
+    </section>
 
     
 
@@ -159,7 +212,7 @@
       </a>
   	</footer>
 
-
+    </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
