--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
 
     <section class="next-section" id="triangle" style="margin-bottom: 3em;">
     	<div class="container-fluid pt-3">
-    		<div class="row">
+    		<!-- <div class="row"> -->
   		  	<div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-3 offset-lg-1">
   		  		<h3 class="text-center">Triangle</h3>
   		  		<hr>
@@ -62,8 +62,8 @@
             <button id="js-btn-drawTriangle" type="button" class="btn btn-primary" style="margin-bottom: 1.5em">Draw</button>
           </p>
 
-  		  </div> <!-- END col -->
-          <br />
+  		  <!-- </div> --> <!-- END col -->
+        
 
   		  	<div class="col-lg-7">
       			<canvas class="canvas-border" id="js-canvas-triangle" width="800" height="600" style="display: block; margin: 0 auto;"></canvas>
