--- a/page2.html
+++ b/page2.html
@@ -23,8 +23,8 @@
 
     <section class="next-section" id="triangle" style="margin-bottom: 3em;">
     	<div class="container-fluid pt-3">
-    		<!-- <div class="row"> -->
-  		  	<div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-3 offset-lg-1">
+    		<div class="row"> 
+  		  	<!-- <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-3 offset-lg-1"> -->
   		  		<h3 class="text-center">Triangle</h3>
   		  		<hr>
   		  		<p class="text-center">Click in the triangle to start</p>
@@ -65,9 +65,9 @@
   		  <!-- </div> --> <!-- END col -->
         
 
-  		  	<div class="col-lg-7">
+  		  	<!-- <div class="col-lg-7"> -->
       			<canvas class="canvas-border" id="js-canvas-triangle" width="800" height="600" style="display: block; margin: 0 auto;"></canvas>
-  		  	</div> <!-- END col-->
+  		  	<!-- </div> --> <!-- END col-->
 
   	  	</div> <!-- END Row -->
   	 </div><!-- END Container -->
