--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
 
     <section class="next-section" id="triangle" style="margin-bottom: 3em;">
     	<div class="container-fluid pt-3">
-    		<div class="row" text-align="center" style="inline:block"> 
+    		<div class="row" style="text-align:center; display:inline-block;"> 
           
   		  	
   		  		<h3 class="text-center">Triangle</h3>
