--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
 
     <section class="next-section" id="triangle" style="margin-bottom: 3em;">
     	<div class="container-fluid pt-3">
-    		<div class="row"> 
+    		<div class="row" width="85%"> 
           
   		  	
   		  		<h3 class="text-center">Triangle</h3>
