--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css">
 
   </head>
-  <body>
+  <body width="85%">
 
   	<h1 class="text-center">Chaos Game 2D</h1>
     <p class="text-center" style="margin-bottom: 30px;">Sierpinski Triangle<br>
