--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="styles.css">
 
   </head>
-  <body width="85%">
-
+  <body >
+<div width="85%">
   	<h1 class="text-center">Chaos Game 2D</h1>
     <p class="text-center" style="margin-bottom: 30px;">Sierpinski Triangle<br>
     Credit: <a href="https://gregwattonville.github.io/chaos-game-2d/" target="_blank">Greg Wattonville</a>
@@ -44,6 +44,6 @@
     <script src="scripts/vendor/rAF.js"></script>
     <script src="scripts/polygon.js"></script>
     <script src="scripts/polygon-animation.js"></script>
-
+    </div>
   </body>
 </html>
